# teradata-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  claude-config.txt  configure_tools.yml  copilot_mcp.yaml  custom_objects.yaml  custom_objects.yml  custom_tools.yaml  docker-compose.yml  driver.py  env  env-old  financial_rag_config.yaml  profiles.yml  pyproject.toml  rag_config.yaml  run_tests.py  sales_objects.yaml  sql_clustering_config.yaml  test_config.yml
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: CLIENT_GUIDE.md  CONTRIBUTING.md  CUSTOMIZING.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  SECURITY.md  TESTING_FRAMEWORK.md  VIDEO_LIBRARY.md
docs/client_guide/: CLIENT_GUIDE.md  Claude_desktop.md  Code_Agents.md  Google_Gemini_CLI.md  Google_agentspace.md  MCP_Inspector.md  Microsoft_copilot.md  Open_WebUI.md  Rest_API.md  Visual_Studio_Code.md
docs/developer_guide/: DEVELOPER_GUIDE.md  HOW_TO_ADD_CUSTOM_FUNCTIONS.md  HOW_TO_ADD_FUNCTIONS_TO_MODULES.md  HOW_TO_ADD_YOUR_FUNCTION.md  PROMPT_DEFINITION_GUIDELINES.md
documentation/: development_convention.md  working_with_clients.md
examples/: README.md
examples/Configuration_Examples/: README.md  example_profiles.yml
examples/MCP_Client_Example/: mcp_chatbot.py
examples/MCP_Testing_Agent/: README.md  test_prompt_objects.yml
examples/MCP_VoiceClient/: README.md  mcp_voice_client.py
examples/app-voice-agent/: profiles.yml
examples/server-customisation/: README.md  profiles.yml
scripts/: README.md  run_tests.py  test_config.yml
scripts/client_examples/MCP_Client_Example/: mcp_chatbot.py  server_config.json
scripts/client_examples/MCP_VoiceClient/: mcp_voice_client.py
scripts/testing/: README.md  component_tests.py  demo_testing_framework.py  execute_tests.py  framework_demo.py  run_framework_demo.py  run_tests.py  run_tests_legacy.py  validate_testing_framework.py  validate_testing_framework_simple.py
src/teradata_mcp_server/: __init__.py  __main__.py  prompt.py  server.py  td_base_tools.py  td_connect.py  td_data_quality_tools.py  utils.py
src/teradata_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/teradata_mcp_server/config/: __init__.py  profiles.yml
src/teradata_mcp_server/teradata_aitools/: __init__.py  custom_tools.py  td_base_prompts.py  td_base_tools.py  td_connect.py  td_data_quality_tools.py  td_dba_prompts.py  td_dba_tools.py  td_rag_prompts.py  td_rag_tools.py
src/teradata_mcp_server/testing/: __init__.py  cli.py  client.py  config.py  reporter.py  result.py  runner.py
src/teradata_mcp_server/tools/: __init__.py  evs_connect.py  module_loader.py  td_connect.py  utils.py
src/teradata_mcp_server/tools/base/: README.md  __init__.py  base_objects.yml  base_prompts.py  base_prompts.yml  base_test.json  base_tools.py
src/teradata_mcp_server/tools/dba/: README.md  __init__.py  dba_objects.yml  dba_prompts.py  dba_tools.py
src/teradata_mcp_server/tools/evs/: README.md  __init__.py  evs_objects.yml  evs_tools.py
src/teradata_mcp_server/tools/fs/: README.md  __init__.py  fs_objects.yml  fs_tools.py  fs_utils.py
src/teradata_mcp_server/tools/qlty/: README.md  __init__.py  qlty_objects.yml  qlty_prompts.py  qlty_tools.py
src/teradata_mcp_server/tools/rag/: README.md  __init__.py  rag_objects.yml  rag_prompts.py  rag_tools.py
src/teradata_mcp_server/tools/sec/: README.md  __init__.py  sec_objects.yml  sec_tools.py
src/teradata_mcp_server/tools/td_base/: __init__.py  td_base_prompts.py  td_base_tools.py
src/teradata_mcp_server/tools/td_dba/: __init__.py  td_dba_prompts.py  td_dba_tools.py
src/teradata_mcp_server/tools/td_fs/: __init__.py  td_fs_tools.py
src/teradata_mcp_server/tools/td_qlty/: __init__.py  td_qlty_prompts.py  td_qlty_tools.py
src/teradata_mcp_server/tools/td_tmpl/: __init__.py  td_tmpl_tools.py
src/teradata_mcp_server/tools/tmpl/: README.md  __init__.py  tmpl_tools.py
teradata_businessinsight_mcp/src/: server.py
teradata_datainsight_mcp/src/: __init__.py  server.py
teradata_dataquality_mcp/src/: server.py
teradata_mcp/src/: server.py
teradata_mcp/src/tdsql/: __init__.py  tdsql.py
teradata_mcp/test/: Claude_desktop_config  prompt.py  pydanticai.py  pydanticaiBedrock.py
teradata_mcp_server/src/: server.py
teradata_mcp_server/src/td_connect/: __init__.py
teradata_objectinsight_mcp/src/: server.py
teradata_objectinsight_mcp/src/tdsql/: tdsql.py
test/: Claude_desktop_config  ClientChatBot.py  client.py  mcp_chatbot.py  pydanticaiBedrock.py  server_config.json
test/ADK_Client_Examples/DBA_Agent/: agent.py
test/ADK_Client_Examples/DBA_Agent/sub_agents/DB_Security_Agent/: agent.py
test/ADK_Client_Examples/DBA_Agent/sub_agents/DB_User_Agent/: __init__.py
test/ADK_Client_Examples/Simple_Agent/: agent.py
test/Claude_Desktop_Config_Files/: claude_desktop_SSE_config  claude_desktop_http_config  claude_desktop_stdio_config
test/Copilot_Agent/: copilot_swagger.yaml
test/DBA_Agent/: __init__.py  agent.py
test/DBA_Agent/shared_lib/: callbacks.py
test/DBA_Agent/sub_agents/DB_Object_Agent/: __init__.py  agent.py
test/DBA_Agent/sub_agents/DB_Security_Agent/: __init__.py
test/DBA_Agent/sub_agents/DB_Space_Agent/: __init__.py  agent.py
test/DBA_Agent/sub_agents/DB_User_Agent/: agent.py
test/EFS/: Readme.md  efs_mcp_test.py  requirements.txt
test/MCP_VoiceClient/: README.md  mcp_voice_client.py  requirements.txt
test/MCP_WebClient/: README.md  mcp_web_client.py  requirements.txt
test/MCP_WebClient/templates/: index.html
test/Simple_Agent/: agent.py
test/td_agent/: agent.py
test/test_suite/: test_suite.py
tests/: README.md  run_mcp_tests.py
tests/cases/: core_test_cases.json  evs_test_cases.json  test_cases.json
tests/scripts/: efs_setup.py
var/test-reports/: test_report_20250812_102844.json  test_report_20250812_104624.json  test_report_20250812_105933.json  test_report_20250812_110853.json
