[project]
name = "teradata-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "boto3>=1.37.37",
    "langchain-core>=0.3.54",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.31",
    "openai>=1.75.0",
    "pip>=25.0.1",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.3",
    "requests>=2.32.3",
    "teradataml>=20.0.0.4",
    "tabulate",
    "litellm>=1.68.2",
    "nest-asyncio>=1.6.0",
    "google-adk>=1.3.0",
    "mcp>=1.9.3",
    "mcp-cli>=0.1.0",
]

[project.scripts]
teradata-mcp-server = "teradata_mcp_server:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
